# animus-protocol

./: CHANGELOG.md  Cargo.toml  README.md  spec.md
.github/workflows/: ci.yml  release.yml
animus-actor/: Cargo.toml
animus-actor/src/: lib.rs
animus-agent-runner-protocol/: Cargo.toml
animus-agent-runner-protocol/src/: lib.rs
animus-chat-protocol/: Cargo.toml
animus-chat-protocol/src/: lib.rs
animus-config-protocol/: Cargo.toml  IMPL-PLAN.md
animus-config-protocol/src/: agent_types.rs  builtins.rs  env_interp.rs  lib.rs  overlay.rs  parse.rs  workflow_types.rs  yaml_diagnostic.rs  yaml_parser.rs  yaml_types.rs
animus-control-protocol/: Cargo.toml
animus-control-protocol/src/: client.rs  control_trait.rs  error.rs  lib.rs  method.rs  types.rs
animus-control-protocol/tests/: contract.rs
animus-durable-store-protocol/: Cargo.toml
animus-durable-store-protocol/src/: lib.rs
animus-environment-protocol/: Cargo.toml
animus-environment-protocol/src/: lib.rs
animus-journal-protocol/: Cargo.toml
animus-journal-protocol/src/: lib.rs
animus-log-storage-protocol/: Cargo.toml
animus-log-storage-protocol/src/: lib.rs
animus-log-storage-protocol/tests/: contract.rs
animus-memory-store-protocol/: Cargo.toml
animus-memory-store-protocol/src/: lib.rs
animus-notifier-protocol/: Cargo.toml
animus-notifier-protocol/src/: lib.rs
animus-plugin-protocol/: Cargo.toml
animus-plugin-protocol/src/: lib.rs
animus-plugin-runtime/: Cargo.toml
animus-plugin-runtime/src/: lib.rs  log.rs  plugin.rs  provider_main.rs  session_provider.rs  subject.rs  transport.rs
animus-plugin-runtime/src/plugin/: tests.rs
animus-provider-protocol/: Cargo.toml
animus-provider-protocol/src/: lib.rs
animus-queue-protocol/: Cargo.toml
animus-queue-protocol/src/: lib.rs
animus-session-backend/: Cargo.toml
animus-session-backend/src/: error.rs  lib.rs
animus-session-backend/src/cli/: launch.rs  mod.rs  types.rs
animus-session-backend/src/parser/: mod.rs  text_events.rs  text_extract.rs
animus-session-backend/src/session/: mod.rs  session_backend.rs  session_backend_info.rs  session_backend_kind.rs  session_backend_resolver.rs  session_capabilities.rs  session_event.rs  session_request.rs  session_run.rs  session_stability.rs  subprocess_session_backend.rs
animus-session-backend/src/session/claude/: backend.rs  mod.rs  parser.rs  transport.rs
animus-session-backend/src/session/codex/: backend.rs  mod.rs  parser.rs  transport.rs
animus-session-backend/src/session/gemini/: backend.rs  mod.rs  parser.rs  transport.rs
animus-session-backend/src/session/oai_runner/: backend.rs  mod.rs  transport.rs
animus-session-backend/src/session/opencode/: backend.rs  mod.rs  parser.rs  transport.rs
animus-subject-protocol/: Cargo.toml
animus-subject-protocol/src/: lib.rs
animus-transport-protocol/: Cargo.toml
animus-transport-protocol/src/: lib.rs
animus-transport-protocol/tests/: contract.rs
animus-trigger-protocol/: Cargo.toml
animus-trigger-protocol/src/: lib.rs
animus-trigger-protocol/tests/: contract.rs
animus-workflow-runner-protocol/: Cargo.toml
animus-workflow-runner-protocol/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: config.rs  hook_policy.rs  lib.rs  model_routing.rs  orchestrator.rs  repository_scope.rs  sync_config.rs
protocol/tests/: agent_runner.rs
schemas/animus-chat-protocol/: BlockDelta.json  ChatMessage.json  ChatModelInfo.json  ChatProviderCapabilities.json  ChatRole.json  ChatStreamEvent.json  ChatStreamNotification.json  ChatStreamRequest.json  ContentBlock.json  ContentBlockStart.json  ConversationMeta.json  CountTokensResponse.json  ImageSource.json  StopReason.json  ToolSchema.json  Usage.json  _all.json
schemas/animus-config-protocol/: CacheToken.json  ConfigChangedEvent.json  ConfigDiagnostic.json  ConfigLoadRequest.json  ConfigLoadResponse.json  ConfigModel.json  ConfigValidateRequest.json  ConfigValidateResponse.json  ConfigWriteRequest.json  ConfigWriteResponse.json  DiagnosticSeverity.json  _all.json
schemas/animus-durable-store-protocol/: AbandonStepRequest.json  AbandonStepResponse.json  BeginStepRequest.json  BeginStepResponse.json  BeginWorkflowRunRequest.json  BeginWorkflowRunResponse.json  CommitStepRequest.json  CommitStepResponse.json  DurableStoreCapabilities.json  InFlightRun.json  QueryRunRequest.json  QueryRunResponse.json  RecoverInFlightRequest.json  RecoverInFlightResponse.json  StepError.json  StepRecord.json  _all.json
schemas/animus-environment-protocol/: EnvironmentHandle.json  EnvironmentSpec.json  ExecNotification.json  ExecRequest.json  ExecResponse.json  ExecStream.json  HarnessCommand.json  PrepareRequest.json  PrepareResponse.json  RepoRef.json  TeardownRequest.json  TeardownResponse.json  _all.json
schemas/animus-log-storage-protocol/: LogEntry.json  LogLevel.json  LogQuery.json  LogQueryResult.json  LogSource.json  LogStorageSchema.json  SupportsFiltering.json  _all.json
schemas/animus-memory-store-protocol/: DeleteScopeRequest.json  DeleteScopeResponse.json  GetMemoryRequest.json  GetMemoryResponse.json  ListScopesRequest.json  ListScopesResponse.json  MemoryQueryResult.json  MemoryScope.json  MemoryStoreCapabilities.json  PutMemoryRequest.json  PutMemoryResponse.json  QueryMemoryRequest.json  QueryMemoryResponse.json  _all.json
schemas/animus-notifier-protocol/: DaemonEventRecord.json  NotifierFlushParams.json  NotifierFlushResult.json  NotifierLifecycleEvent.json  NotifierNotifyParams.json  NotifierNotifyResult.json  NotifierSchema.json  _all.json
schemas/animus-plugin-protocol/: ChatMessage.json  ConversationAppendMessageRequest.json  ConversationAppendMessageResponse.json  ConversationCreateRequest.json  ConversationCreateResponse.json  ConversationDeleteRequest.json  ConversationDeleteResponse.json  ConversationListRequest.json  ConversationListResponse.json  ConversationLoadMessagesRequest.json  ConversationLoadMessagesResponse.json  ConversationLoadMetaRequest.json  ConversationLoadMetaResponse.json  ConversationMeta.json  (+10 more)
scripts/: export-all-schemas.sh
(+57 files in other folders)
