[workspace]
members = [
    "animus-plugin-protocol",
    "animus-subject-protocol",
    "animus-provider-protocol",
    "animus-trigger-protocol",
    "animus-plugin-runtime",
    "animus-session-backend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Launchapp.dev"]
homepage = "https://github.com/launchapp-dev/animus-cli"
repository = "https://github.com/launchapp-dev/animus-protocol"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "process", "sync"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures-core = "0.3"
