[package]
name = "animus-agent-runner-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Launchapp.dev"]
homepage = "https://github.com/launchapp-dev/animus-cli"
repository = "https://github.com/launchapp-dev/animus-protocol"
description = "Agent-runner plugin-kind protocol types for Animus v0.5 (stdio JSON-RPC surface for the agent-runner sidecar: per-run spawn, output streaming, control, status)."

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.0" }
thiserror = "1"
anyhow = "1"
