[package]
name = "animus-agent-runner-protocol"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Launchapp.dev"]
homepage = "https://github.com/launchapp-dev/animus-cli"
repository = "https://github.com/launchapp-dev/animus-protocol"
description = "DEPRECATED — agent-runner plugin-kind protocol types for Animus v0.5. As of v0.5.3 the agent-runner sidecar was deleted; CLI agent calls now route directly through provider plugins via SessionBackendResolver. New code should not depend on this crate."

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.0" }
thiserror = "1"
anyhow = "1"
