[package]
name = "animus-config-protocol"
version = "0.1.0"
edition = "2021"
description = "Wire types for the Animus `config_source` plugin role (JSON-RPC 2.0). Defines the canonical config model envelope a config source returns and the kernel compiles."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "1.0"
anyhow = "1.0"
sha2 = "0.10"
protocol = { path = "../protocol" }
animus-actor = { path = "../animus-actor" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "animus-config-protocol-export-schema"
path = "src/bin/export_schema.rs"
