[package]
name = "animus-control-protocol"
description = "Wire format for Animus daemon control RPC — CLI, MCP, and WebAPI clients call into the daemon over this surface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
animus-plugin-protocol      = { path = "../animus-plugin-protocol",      version = "0.1.6" }
animus-subject-protocol     = { path = "../animus-subject-protocol",     version = "0.1.6" }
animus-log-storage-protocol = { path = "../animus-log-storage-protocol", version = "0.1.6" }
animus-trigger-protocol     = { path = "../animus-trigger-protocol",     version = "0.1.6" }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
futures-core.workspace = true
