[package]
name = "animus-durable-store-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Launchapp.dev"]
homepage = "https://github.com/launchapp-dev/animus-cli"
repository = "https://github.com/launchapp-dev/animus-protocol"
description = "Durable execution / step checkpointing plugin-kind protocol types for Animus v0.5 (reservation-fenced step persistence)."

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.0" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "animus-durable-store-protocol-export-schema"
path = "src/bin/export_schema.rs"
