[package]
name = "animus-plugin-protocol"
description = "Wire types for Animus stdio plugin protocol (JSON-RPC 2.0). Foundation crate every Animus plugin depends on."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
