[package]
name = "animus-plugin-runtime"
description = "Shared stdio JSON-RPC loop + handshake helpers for Animus plugins. Used by all plugin authors."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol", version = "0.1.9" }
animus-subject-protocol = { path = "../animus-subject-protocol", version = "0.1.9" }
animus-provider-protocol = { path = "../animus-provider-protocol", version = "0.1.9" }
animus-trigger-protocol = { path = "../animus-trigger-protocol", version = "0.1.9" }
animus-log-storage-protocol = { path = "../animus-log-storage-protocol", version = "0.1.9" }
animus-transport-protocol = { path = "../animus-transport-protocol", version = "0.1.9" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures-core.workspace = true
