[package]
name = "animus-plugin-runtime"
description = "Shared stdio JSON-RPC loop + handshake helpers for Animus plugins. Used by all plugin authors."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol", version = "0.1.12" }
animus-subject-protocol = { path = "../animus-subject-protocol", version = "0.1.12" }
animus-provider-protocol = { path = "../animus-provider-protocol", version = "0.1.12" }
animus-trigger-protocol = { path = "../animus-trigger-protocol", version = "0.1.12" }
animus-log-storage-protocol = { path = "../animus-log-storage-protocol", version = "0.1.12" }
animus-transport-protocol = { path = "../animus-transport-protocol", version = "0.1.12" }
animus-session-backend = { path = "../animus-session-backend", version = "0.1.13" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
anyhow.workspace = true
async-trait.workspace = true
futures-core.workspace = true
