[package]
name = "animus-provider-protocol"
description = "ProviderBackend trait for Animus LLM provider plugins (Claude, Codex, Gemini, OpenAI-compat, on-prem, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
