[package]
name = "animus-provider-protocol"
description = "ProviderBackend trait for Animus LLM provider plugins (Claude, Codex, Gemini, OpenAI-compat, on-prem, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol", version = "0.1.12" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
schemars = "1.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "animus-provider-protocol-export-schema"
path = "src/bin/export_schema.rs"
