[package]
name = "animus-queue-protocol"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Launchapp.dev"]
homepage = "https://github.com/launchapp-dev/animus-cli"
repository = "https://github.com/launchapp-dev/animus-protocol"
description = "Queue plugin-kind protocol types for Animus v0.5 (per-project SubjectDispatch FIFO with lease, hold, release, reorder)."

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol" }
animus-subject-protocol = { path = "../animus-subject-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.0" }
