[package]
name = "animus-subject-protocol"
description = "SubjectBackend trait + normalized Subject schema for Animus subject backend plugins (Linear, Jira, GitHub Issues, Notion, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol", version = "0.1.9" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
futures-core.workspace = true
