[package]
name = "animus-transport-protocol"
description = "TransportBackend trait + wire types for Animus transport plugins (HTTP, GraphQL, gRPC, WebSocket, MQTT) that expose external surfaces and translate inbound requests into control RPCs against the daemon."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
animus-plugin-protocol = { path = "../animus-plugin-protocol", version = "0.1.12" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
thiserror.workspace = true
schemars = { version = "1.0", features = ["chrono04"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "animus-transport-protocol-export-schema"
path = "src/bin/export_schema.rs"
