[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
animus-subject-protocol = { path = "../animus-subject-protocol" }
anyhow = "1.0"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1"
thiserror = "2.0"
sha2 = "0.10"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[features]
test-utils = []

[dev-dependencies]
protocol = { path = ".", features = ["test-utils"] }
proptest = "1.4"
schemars = "0.8"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
